--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "/"
               }
             ],
             "styles": [
@@ -92,6 +93,9 @@
                 "input": "public"
               }
             ],
+            "scripts": [
+              "node_modules/flowbite/dist/flowbite.min.js"
+        ],
             "styles": [
               "src/styles.scss"
             ]
